--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "url": "https://github.com/Chaitali1125/react-devspace/issues"
   },
   "homepage": "https://github.com/Chaitali1125/react-devspace#readme",
-  "devDependencies": {
-    "parcel": "^2.14.4"
-  },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "parcel": "^2.15.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.22.0",
+    "tailwindcss": "^4.1.11"
   },
   "browserslist": [
     "last 2 versions"
